[tool.poetry]
name = "streamchat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1.1"
fastapi = "^0.61.1"
uvloop = "^0.14.0"
uvicorn = "^0.11.8"
aioredis = "^1.3.1"
aiofiles = "^0.5.0"
jinja2 = "^2.11.2"
loguru = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
